--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEXT WEBSITE</title>
+    <title>WALK</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+    
 
 </head>
 
@@ -16,7 +17,7 @@
     <!--NAvBAR SECTION-->
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="/" id="navbar-logo"><i class="fas fa-gem"></i>  NEXT</a>
+            <a href="/" id="navbar-logo"><i class="fa-solid fa-paw"></i> WALK</a>
             <div class="navbar-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -29,10 +30,10 @@
                     <a href="/" class="navbar-links">Home</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="/tech.html" class="navbar-links">Tech</a>
+                    <a href="/tech.html" class="navbar-links">Services</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="/" class="navbar-links">Products</a>
+                    <a href="/" class="navbar-links">Help</a>
                 </li>
                 <li class="navbar-btn">
                     <a href="/" class="button">SignUp</a>
@@ -46,29 +47,29 @@
     <div class="main">
         <div class="main-container">
             <div class="main-content">
-                <h1>NEXT GENERATION</h1>
-                <h2>TECHNOLOGY</h2>
-                <p>see what makes us different</p>
+                <h1>TAKE.CARE.RETURN</h1>
+                <h2>The Best Way Possible</h2>
+                <p>To busy to walk your dog we have your back.</p>
                 <button class="main-btn"> <a href="/"> Get started</a></button>
             </div>
             <div class="main-img-container">
-                <img src="images/pic1.svg" alt="pic" id="main-img">
+                <img src="images/dogwalk1.png" alt="pic" id="main-img">
             </div>
         </div>
     </div>
     <!--Services section-->
     <div class="services">
-        <h1>See what the hype is about</h1>
+        <h1>Take the first step with US!</h1>
         <div class="services-container">
             <div class="services-card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered TEchnology</p>
+                <h2>Book Now</h2>
+                <p>All you need to do is click</p>
                 <button>Get Started</button>
             </div>
             <div class="services-card">
-                <h2>Are you Ready?</h2>
-                <p>Take that leap pf Faith today</p>
-                <button>Get Started</button>
+                <h2>Our services</h2>
+                <p>Check us out</p>
+                <button>View</button>
             </div>
         </div>
     </div>
@@ -115,9 +116,9 @@
         <div class="social-media">
             <div class="social-media-wrap">
                 <div class="footer-logo">
-                    <a href="/" id="footer-logo"><i class="fas fa-gem"></i>NEXT</a>
+                    <a href="/" id="footer-logo"><i class="fa-solid fa-paw"></i></i>WALK</a>
                 </div>
-                <p class="website-right">NEXT All rights Reserved &copy; 2021</p>
+                <p class="website-right">WALK All rights Reserved &copy; 2021</p>
                 <div class="social-icons">
                     <a href="/" class="socials-icon-link" target="_blank "><i class="fab fa-facebook"></i>
                     </a> <a href="/" class="socials-icon-link" target="_blank "><i class="fab fa-instagram"></i>
