--- a/tech.html
+++ b/tech.html
@@ -52,16 +52,16 @@
                 <button class="main-btn"> <a href="/"> Get started</a></button>
             </div>
             <div class="main-img-container">
-                <img src="./images/pexels-karol-d-841228.jpg" alt="pic" id="main-img">
+                <img src="./images/dog2.jpg" alt="pic" id="main-img">
             </div>
         </div>
     </div>
     <!--Services section-->
     <div class="services">
-        <h1>See what the hype is about</h1>
+        <h1>Take the first step with US!</h1>
         <div class="services-container">
             <div class="services-card">
-                <h2>Experience Bliss</h2>
+                <h2>Book Now</h2>
                 <p>AI Powered TEchnology</p>
                 <button>Get Started</button>
             </div>
